<resources>
    <!--Registro + Log in-->
    <string name="app_name">BoxIt</string>
    <string name="introduce_usuario">Nombre de usuario o email</string>
    <string name="contrasenya">Contraseña</string>
    <string name="botonLogin">Log in</string>
    <string name="logingoogle">Entra con Google</string>
    <string name="noTienesCuenta">¿No tienes cuenta?</string>
    <string name="tienesCuenta">¿Ya tienes cuenta?</string>
    <string name="entra">Accede</string>
    <string name="regis">Registrate</string>
    <string name="email">Email</string>
    <string name="nombre">Nombre</string>
    <string name="nombreUsuario">Nombre de usuario</string>
    <string name="crearContraseña">Contraseña</string>
    <string name="confirmarContraseña">Confirmar contraseña</string>
    <string name="registrarte">Registrarse</string>
    <string name="signupgoogle">Registrarse con Google</string>
    <string name="crearCuenta">Crear Cuenta</string>
    <string name="contraseñasDiferentes">Las contraseñas deben coincidir</string>
    <string name="emailIncorrecto">Email incorrecto</string>
    <string name="passwordIncorrecto">Contraseña incorrecta</string>
    <string name="userNameDuplicado">Nombre de usuario ya existente</string>
    <string name="userNameIncorrecto">Nombre de usuario incorrecto</string>
    <string name="nameIncorrecto">Nombre incorrecto</string>
    <string name="o">o </string>
    <string name="patronContraseña">La contraseña debe contener al menos 8 caracteres, un número y una mayúscula </string>
    <string name="errerLogIn">Datos incorrectos</string>

    <!--Vista principal-->
    <string name="bienvenida">Hola</string>
    <string name="tusCap">Tus Cápsulas</string>
    <string name="tusBox">Tus Cajas</string>
    <string name="verTod">ver todas</string>
    <string name="sharedCap">Cápsulas compartidas</string>
    <string name="sharedBox">Cajas compartidas</string>
    <string name="capClose">La capsula está cerrada</string>

    <!--Creaciones-->
    <string name="crearCaja">Crear caja</string>
    <string name="crearCapsula">Crear cápsula</string>
    <string name="desde0">Crear desde 0</string>
    <string name="diseños">Diseños recomendados</string>
    <string name="NombreCaja">Introduce Nombre de la caja</string>
    <string name="NombreCapsula">Introduce Nombre de la cápsula</string>
    <string name="CapsulaTitulo">Nombre de la cápsula</string>
    <string name="CajaTitulo">Nombre de la caja</string>
    <string name="selectImg">Elegir foto de Portada</string>
    <string name="addCol">Añadir Colaboradores</string>
    <string name="abrirse">días para abrirse</string>
    <string name="cerrarse">días para cerrarse</string>
    <string name="fechaApertura">Fecha de apertura</string>
    <string name="fechaCierre">Fecha de cierre</string>
    <string name="requerido">Campo obligatorio</string>
    <string name="errCrearCaja">No se ha podido crear la caja</string>
    <string name="set">Establecer</string>
    <string name="dateObligatoria">Fechas obligatorias</string>
    <string name="CierrePreApertura">El cierre debe ser previo a la apertura</string>
    <string name="datePreActual">Ninguna fecha puede ser anterior o igual a la de hoy</string>
    <string name="tiempoCerrado">La cápsula estará cerrada durante </string>
    <string name="dias">días</string>
    <string name="abiertaPermanente">Permanentemente abierta </string>
    <string name="errCrearCap">No se ha podido crear la cápsula</string>
    <string name="errUpdate">No se han podido actualizar los datos</string>


    <!--Ver all-->
    <string name="cajas">Cajas</string>
    <string name="capsulas">Cápsulas</string>
    <string name="todas">Todas</string>
    <string name="mine">Mías</string>
    <string name="compartidas">Compartidas conmigo</string>
    <string name="noCajas">Aún no tienes ninguna caja</string>
    <string name="noCapsulas">Aún no tienes ninguna cápsula</string>

    <!--Perfil-->
    <string name="editarPerf">Editar perfil</string>
    <string name="cerrar">Cerrar sesión</string>

    <!--Amigos-->
    <string name="amigos">Amigos</string>
    <string name="solicitudesAmistad">Solicitudes</string>
    <string name="buscarAmigos">Buscar</string>
    <string name="noAmigos">Aún no tienes amigos</string>
    <string name="noSolicitudes">No tienes solicitudes</string>
    <string name="noBusqueda">No se han encontrado resultados</string>

    <!--Elementos-->
    <string name="camara">Cámara</string>
    <string name="galeria">Fotos</string>
    <string name="todo">Ver todo</string>
    <string name="musica">Música</string>
    <string name="notas">Notas</string>
    <string name="docs">Documentos</string>
    <string name="fot">Fotos</string>
    <string name="vid">Videos</string>
    <string name="audio">Audio</string>
    <string name="addBien">Elemento añadido a la caja</string>
    <string name="addBienCap">Elemento añadido a la cápsula</string>
    <string name="addMal">Error al insertar elemento</string>
    <string name="colaboradores">Colaboradores</string>
    <string name="dia">Día</string>
    <string name="dias2">Días</string>
    <string name="hora">Hora</string>
    <string name="horas">Horas</string>
    <string name="minuto">Minuto</string>
    <string name="minutos">Minutos</string>

    <!--titulos-->
    <string name="delacaja">de la caja</string>
    <string name="delacapsula">de la cápsula</string>
    <string name="tododelacapsula">Contenido de la cápsula</string>
    <string name="tododelacaja">Contenido de la caja</string>

    <!--mensajes varios -->
    <string name="noPDFViewer">Error al abrir el archivo</string>
    <string name="eliminar">¿Desea eliminar el elemento?</string>
    <string name="delete">Eliminar</string>
    <string name="cancelar">Cancelar</string>
    <string name="aceptar">Aceptar</string>
    <string name="guardar">Guardar</string>
    <string name="actualizar">Actualizar</string>
    <string name="eliminar2">Eliminar</string>
    <string name="deleteBien">Elemento eliminado</string>
    <string name="deleteMal">Error al eliminar elemento</string>
    <string name="editar">Editar</string>
    <string name="abandonarCap">¿Desea abandonar esta cápsula?</string>
    <string name="abandonarBox">¿Desea abandonar esta caja?</string>
    <string name="abandonar">Abandonar</string>
    <string name="abandonoBien">Abandono realizado</string>
    <string name="abandonoMal">Error al abandonar</string>
    <string name="editarBien">Los datos han sido actualizados</string>
    <string name="editarMal">Error al actualizar los datos</string>

    <!--Diseños -->
    <string name="disVerano">Verano</string>
    <string name="disNavidad">Navidad</string>
    <string name="disTFG">TFG</string>
    <string name="disPrimavera">Primavera</string>

    <!--Música -->
    <string name="addMusPregunta">¿Desea añadir su última canción escuchada en Spotify?</string>
    <string name="add">Añadir</string>
    <string name="errorConect">Algo fue mal</string>

    <string name="infoCapsule1">
        Una cápsula funciona igual que una caja en cuanto a lo que puedes guardar,
        pero el tiempo para hacerlo es limitado!
    </string>
    <string name="infoCapsule2">
        Establece una fecha de cierre y espera para ver tus recuerdos durante dias, semanas o meses,
        de modo que cuando llegue la fecha de apertura de la capsula, serán aun más especiales
    </string>

    <!--Notificaciones -->
    <string name="solicitudNoti"> quiere ser tu amigo</string>
    <string name="solicitudAceptaNoti"> ha aceptado tu solicitud de amistad</string>
    <string name="noti_solicitud">Solicitud de amistad</string>
    <string name="exito_noti">Solicitud enviada</string>
    <string name="titleAddCaja">Nueva caja colaborativa</string>
    <string name="titleAddCapsula">Nueva cápsula colaborativa</string>
    <string name="bodyAddCaja"> te ha añadido a la caja </string>
    <string name="bodyAddCapsula"> te ha añadido a la cápsula </string>
    <string name="bodyAddCajaUpdate"> ha añadido colaboradores a la caja </string>
    <string name="bodyAddCapsUpdate"> ha añadido colaboradores a la cápsula </string>
    <string name="titleCajaUpdate">Caja actualizada</string>
    <string name="titleCapsUpdate">Cápsula actualizada</string>

</resources>