<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.Registro">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/fondoClaro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fondoClaro"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="240dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                app:srcCompat="@drawable/icon_boxit_text" />

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentTop="true"
                android:layout_gravity="center"
                android:fontFamily="@font/interbold"
                android:gravity="center"
                android:text="@string/crearCuenta"
                android:textAppearance="@style/Logo"
                android:textColor="@color/textoOscuro" />

            <ImageButton
                android:id="@+id/addfotoperfil"
                style="@style/ImagenRedondeada"
                android:layout_width="110dp"
                android:layout_height="110dp"
                android:layout_gravity="center"
                android:backgroundTint="#00FFFFFF"
                android:scaleType="centerCrop"

                app:srcCompat="@drawable/user_pordefecto2" />


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_email_lay"

                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/reg_email"
                    style="@style/Formulario"
                    android:fontFamily="@font/interregular"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"
                    android:textColorHint="@color/textoOscuro" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_nombrePers_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/reg_nombrePers"
                    style="@style/Formulario"
                    android:fontFamily="@font/interregular"
                    android:hint="@string/nombre"
                    android:textColorHint="@color/textoOscuro" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_nombre_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/reg_nombre"
                    style="@style/Formulario"
                    android:fontFamily="@font/interregular"
                    android:hint="@string/nombreUsuario"
                    android:textColorHint="@color/textoOscuro" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_contrasenya_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:id="@+id/reg_crear_contrasenya"
                    style="@style/Formulario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/interregular"
                    android:hint="@string/contrasenya"
                    android:inputType="textPassword"
                    android:textColorHint="@color/textoOscuro" />
            </com.google.android.material.textfield.TextInputLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="55dp"
                android:layout_marginRight="55dp"
                android:fontFamily="@font/interregular"
                android:text="@string/patronContraseña"
                android:textSize="11dp" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/reg_confirmar_contrasenya_lay"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <EditText
                    android:id="@+id/reg_confirmar_contrasenya"
                    style="@style/Formulario"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:fontFamily="@font/interregular"
                    android:hint="@string/confirmarContraseña"
                    android:inputType="textPassword"
                    android:textColorHint="@color/textoOscuro" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/buttonRegistrarse"
                android:layout_width="match_parent"
                android:layout_height="53dp"
                android:layout_marginLeft="40dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="40dp"
                android:backgroundTint="@color/rosaBoton"
                android:fontFamily="@font/interregular"
                android:text="@string/registrarte"
                android:textColor="@color/rosaFormulario" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="20dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <View
                    android:id="@+id/divider3"
                    android:layout_width="380dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:background="@color/rosaBoton" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:layout_marginBottom="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/inter"
                        android:text="@string/tienesCuenta"
                        android:textColor="@color/textoOscuro" />

                    <TextView
                        android:id="@+id/loginBtn"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:clickable="true"
                        android:fontFamily="@font/interbold"
                        android:text="@string/entra"
                        android:textColor="@color/textoOscuro" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>