<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentacion.CrearCajaForm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:id="@+id/ellipse_13"
            style="@style/FondoBase" />

        <TextView
            android:id="@+id/nombre_caja_tit"
            style="@style/TituloFondo"
            android:layout_marginTop="-100dp"
            android:text="Nombre de la caja" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/til_nombre"
            style="@style/inputLayoutForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="50dp">

            <EditText
                android:id="@+id/nombre_caja_input"
                style="@style/editTextForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor = "@color/textoOscuro"
                android:textColorHint="@color/grisForm"
                android:hint="@string/NombreCaja"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconoImg"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:src="@drawable/photo" />

            <TextView
                android:id="@+id/fotoPortadaCaja"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/Logo"
                android:textSize="17dp"
                android:textColor="@color/rosaBoton"
                android:text="@string/selectImg" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="30dp"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iconoCol"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:layout_weight="1"
                android:src="@drawable/colaboradores" />

            <TextView
                android:id="@+id/addColCaja"
                android:layout_marginLeft="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textAppearance="@style/Logo"
                android:textSize="17dp"
                android:textColor="@color/rosaBoton"
                android:text="@string/addCol" />
        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_friends"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="8dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:reverseLayout="true"
            app:stackFromEnd="true"/>

        <Button
            android:id="@+id/CrearCajaBTN"
            android:layout_width="match_parent"
            android:background="@drawable/button_shape"
            android:layout_height="53dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/interbold"
            android:elevation="5dp"
            android:textSize="20dp"
            android:textColor="@color/rosaFormulario"
            android:clickable="true"
            android:text="@string/crearCaja" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>